<resources>
    <string name="app_name">ShiftLabTest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_register_button">Sign Up</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="register_title_text">Sign Up</string>
    <string name="greetings_button_text">Greetings</string>
    <string name="date_template">%2s.%2s.%4s</string>
    <string name="preferences_key">name_surname_preferences</string>
    <string name="saved_name_key">saved_name_key</string>
    <string name="saved_surname_key">saved_surname_key</string>
    <string name="default_name_key">Stranger</string>
    <string name="default_surname_key">Mysterious</string>
    <string name="hello_message_template">Hello, %s %s!</string>
    <string name="dialog_button_text">Hey!</string>
    <string name="date_error">Date incorrect</string>
    <string name="name_surname_error">Only letters allowed</string>
    <string name="password_error">At least 8 symbols, lower and uppercase letters and number</string>
    <string name="repeat_password_error">Passwords are not the same</string>
</resources>